ux improvement: refresh button and fix scroll bar left shift

--- a/desktop/src/renderer/index.css
+++ b/desktop/src/renderer/index.css
@@ -117,7 +117,11 @@
   * {
     @apply border-border outline-ring/50;
   }
+  html {
+    scrollbar-gutter: stable;
+    overflow-x: hidden;
+  }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground ;
   }
 }
